objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>SCMC__Customer_Quotation_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the customer quotation line item that this opportunity line is associated with.</description>
        <inlineHelpText>Reference to the customer quotation line item that this opportunity line is associated with.  This is populated when you create</inlineHelpText>
        <label>Customer Quotation Line</label>
        <referenceTo>SCMC__Customer_Quotation_Line__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAGeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the soft date that determines when billing occurs.</description>
        <inlineHelpText>Lookup to the soft date that determines when billing occurs.</inlineHelpText>
        <label>Billing Term</label>
        <referenceTo>ffbc__SoftDate__c</referenceTo>
        <relationshipLabel>Related Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingType__c</fullName>
        <description>The type of billing for this opportunity line item.</description>
        <inlineHelpText>The type of billing for this opportunity line item.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring Fixed</fullName>
                </value>
                <value>
                    <fullName>Recurring Variable</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__ContractLineEndDate__c</fullName>
        <description>Date on which the contract line item ends.</description>
        <inlineHelpText>Date on which the contract line item ends.</inlineHelpText>
        <label>Contract Line End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractLineFirstBillDate__c</fullName>
        <description>First date on which the contract line item is to be billed.</description>
        <inlineHelpText>First date on which the contract line item is to be billed.</inlineHelpText>
        <label>Contract Line First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractLineStartDate__c</fullName>
        <description>Date from which billing can commence for the contract line item.</description>
        <inlineHelpText>Date from which billing can commence for the contract line item.</inlineHelpText>
        <label>Contract Line Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plan to which this opportunity line item relates.</description>
        <inlineHelpText>Plan to which this opportunity line item relates.</inlineHelpText>
        <label>Plan Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ffbc__Plan__c.ffbc__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ffbc__Plan__c</referenceTo>
        <relationshipLabel>Related Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the unit of measure used to determine customer usage on this opportunity line item.</description>
        <inlineHelpText>Lookup to the unit of measure used to determine customer usage on this opportunity line item.</inlineHelpText>
        <label>Unit Of Measure</label>
        <referenceTo>ffbc__UnitOfMeasure__c</referenceTo>
        <relationshipLabel>Related Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Added_To_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this was previously added to a project during the create project process. If checked it will not be picked up in the next create project</description>
        <label>Added To Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProductLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServicesProductLine</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>